kubernetes/apps/networking/unifi/ingress/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: networking
subsets:
  - addresses:
      - ip: ${UNIFI_SERVICE_ADDR}
    ports:
      - name: https
        port: 443
        protocol: TCP
