kubernetes/apps/networking/unifi/ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: networking
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
