kubernetes/apps/networking/unifi/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_ssl_server_name on;
       proxy_ssl_name unifi.${SECRET_DOMAIN};
    hajimari.io/enable: "true"
    hajimari.io/icon: "lan"
spec:
  ingressClassName: nginx
  tls:
    - secretName: unifi-tls
      hosts:
        - unifi.${SECRET_DOMAIN}
  rules:
    - host: unifi.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: unifi
                port:
                  number: 443
